--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.0.1",
     "multer": "^1.4.5-lts.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.6.2",
     "nodemon": "^3.0.1",
     "pm2": "^5.3.0",
     "sqlite": "^5.0.1",
